# ctai_samples

./: README.md
lenny_moves/: CMakeLists.txt  package.xml
lenny_moves/src/: lenny_routine.cpp
lenny_samples/lenny_moves/: CMakeLists.txt
lenny_samples/lenny_moves/src/: gripper_node_sample.cpp  lenny_routine.cpp  sample_node.cpp
moveit_tutorials/doc/move_group_interface/src/: move_group_interface_tutorial.cpp
src/lenny_moves/: CMakeLists.txt
src/lenny_moves/src/: lenny_attach_object.cpp  lenny_joint_move_sample.cpp  lenny_pose_goal.cpp  lenny_write_to_25xxx_variables.cpp
src/moveit_tutorials/: README.md
